footer added,some additional styling also

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
 	<title>WOEAbout</title>
 </head>
@@ -46,8 +47,14 @@
 	<section>
 
 	</section>
-	<footer></footer>
-
+	<footer>
+    <ul class="footer-links" >
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-square" aria-hidden="true"></i>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
+    </ul>
+    </footer>
 
 
 </body>
