--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WOEIndex</title>
   </head>
   <body>
     <header>
   <div class="header">
-  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" ></a>
+  <a href="index.html" > <img src="assets/images/WOE_Overlay.png" class="logo"></a>
   <div class="header-right">
     <a class="active" href="index.html">Home</a>
     <a href="contact.html">Contact</a>
@@ -194,7 +195,14 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+    <ul class="footer-links" >
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-square" aria-hidden="true"></i>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
+    </ul>
+    </footer>
   </body>
  <script>
 function myFunction() {
