--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WOEAbout</title>
   </head>
@@ -51,8 +52,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="intro">
-              <h1 class="display-4">Welcome friend</h1>
-              <p class="lead">Thanks for stopping by.</p>
+              <h1 class="display-2">Welcome friend</h1>
+              <p class="display-6">Thanks for stopping by.</p>
               <p>We hope you enjoy our website and of course, our products!</p>
               <a class="btn btn-custom btn-lg" href="products.html" role="button">Discover more</a>
 </div>
@@ -63,13 +64,14 @@
       </div>
 
         <div class="row">
-          <div class="col-md-6 overfloe-hidden">
+          <div class="col-md-6">
  <div class="jumbotron">
  <div class="intro">
             <p class="display-5">
               We  provide you top quality products from our
               ever-expanding range. We are a family-run business and can assure
-              you of the very best products at the very best prices.
+              you of the very best products at the very best prices. Try us and you'll never look back.
+              Keep a look out for special discounts!
             </p>
           </div>
           </div>
@@ -105,6 +107,13 @@
       </div>
       
     </section>
-    <footer></footer>
+    <footer>
+    <ul class="footer-links" >
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-square" aria-hidden="true"></i>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
+    </ul>
+    </footer>
   </body>
 </html>
