--- a/products.html
+++ b/products.html
@@ -138,7 +138,14 @@
 <!-- END MAIN -->
 </div>
 	</section>
-	<footer></footer>
+	<footer>
+    <ul class="footer-links" >
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-square" aria-hidden="true"></i>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
+    </ul>
+    </footer>
 <script>
 filterSelection("all")
 function filterSelection(c) {
